Ruby: Fix typos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1389,6 +1389,7 @@ message(STATUS "   OpenSSL support             : ${CMAKE_STATUS_SSL_SUPPORT}")
 message(STATUS "Scripting:")
 message(STATUS "   Perl support                : ${CMAKE_STATUS_PERL_SUPPORT}")
 message(STATUS "   Python support              : ${CMAKE_STATUS_PYTHON_SUPPORT}")
+message(STATUS "   Ruby support                : ${CMAKE_STATUS_RUBY_SUPPORT}")
 message(STATUS "DCC Features:")
 message(STATUS "   GSM support                 : ${CMAKE_STATUS_GSM_SUPPORT}")
 #message(STATUS "   DCC Canvas Support          : ${CMAKE_STATUS_DCC_CANVAS_SUPPORT}")
